apply changes which were asked

--- a/src/app/components/car/car.html
+++ b/src/app/components/car/car.html
@@ -6,7 +6,7 @@
 		     alt="{{$ctrl.car.description}}">
 		<div class="text-center">
 			<h3 class="m-t-sm">{{$ctrl.car.Family}}</h3>
-			<p class="m-t-sm">{{$ctrl.car.Code}}</p>
+			<p class="m-t-sm">{{$ctrl.car.PresentationCode}}</p>
 
 		</div>
 	</a>
