--- a/src/app/components/select-options/step-two/steptwo.html
+++ b/src/app/components/select-options/step-two/steptwo.html
@@ -25,7 +25,7 @@
 
 						<th width="65%">Περιγραφή</th>
 
-						<th class="text-center"
+						<th class="text-right"
 						    width="10%">Τιμή
 						</th>
 
@@ -43,9 +43,9 @@
 							     class="img-responsive">
 						</td>
 
-						<td class="text-center">{{color.OptionCode}}</td>
+						<td class="text-center">{{color.PresentationFee}}</td>
 						<td>{{color.OptionDescription}}</td>
-						<td class="text-center">{{color.Price | currency}}</td>
+						<td class="text-right">{{color.Price | currency}}</td>
 
 					</tr>
 				</tbody>
