--- a/src/assets/styles/sass/partials/_figures.scss
+++ b/src/assets/styles/sass/partials/_figures.scss
@@ -81,6 +81,18 @@ table.table.table-hover {
 	}
 }
 
+.table-hover tbody tr:hover td,
+.table-hover tbody tr:hover th,
+.table-hover tbody tr.active:hover td,
+.table-hover tbody tr.active:hover th {
+	background-color: #efefef;
+}
+
+.table-hover tbody tr.active td,
+.table-hover tbody tr.active th {
+	background-color: #efefef;
+}
+
 
 table.table-card td,
 table.table-card th {
@@ -157,4 +169,12 @@ div.body {
 	padding-left: 12px;
 	padding-right: 30px;
 	text-align: right;
+}
+
+label>input {
+	display:none;
+}
+
+label input:focus {
+	display:block;
 }
