--- a/src/app/components/select-options/step-three/manual-equipment-form/manualequipment.html
+++ b/src/app/components/select-options/step-three/manual-equipment-form/manualequipment.html
@@ -84,10 +84,9 @@
 					       required
 					       type="string"
 					       name="price"
-					       ng-pattern="/^[0-9]+([,.][0-9]+)?$/"
+					       ui-number-mask="2"
 					       class="form-control"
 					       placeholder="Συμπληρώστε την τιμή του εξοπλισμού">
-
 
 				</div>
 
