Minor Change on UI

--- a/src/app/components/select-options/step-one/stepone.html
+++ b/src/app/components/select-options/step-one/stepone.html
@@ -46,7 +46,7 @@
 
 					<td>{{model.ModelDescription || '-'}}</td>
 
-					<td class="text-center">{{(model.EngineDisplacement || '-') + ' / ' + (model.PowerKW || '-') + ' / ' +(model.PowerPS || '-')}}</td>
+					<td class="text-center">{{(model.EngineDisplacement || '-') + ' / ' + (model.PowerPS || '-') + ' / ' +(model.PowerKW || '-')}}</td>
 
 
 					<td class="text-center">{{model.CO2EmissionCombined || '-'}}</td>
