significant changes after document

--- a/src/app/components/select-options/step-four/stepfour.html
+++ b/src/app/components/select-options/step-four/stepfour.html
@@ -19,8 +19,7 @@
 							<tbody>
 
 								<tr>
-									<th></th>
-									<th></th>
+									<th colspan="2"></th>
 									<th class="text-center">Κωδικός</th>
 									<th class="text-center">CO2</th>
 									<th class="text-right">Χωρίς Φ.Π.Α</th>
@@ -30,29 +29,27 @@
 
 								<tr>
 									<th>Μοντέλο</th>
-									<td>{{$ctrl.model.ModelDescription}} <small class="text-muted">({{$ctrl.model.Code}})</small></td>
-									<td class="text-center">{{$ctrl.model.PresentationCode || '-'}}</td>
-									<td class="text-center">{{$ctrl.model.CO2EmissionCombined}}</td>
-									<td class="text-right">{{$ctrl.model.Price | currency}}</td>
-									<td class="text-right">{{$ctrl.model.Price * $ctrl.taxFee| currency}}</td>
+									<td>{{$ctrl.model.ModelDescription}}
+										<td class="text-center">{{$ctrl.model.PresentationCode || '-'}}</td>
+										<td class="text-center">{{$ctrl.model.CO2EmissionCombined}}</td>
+										<td class="text-right">{{$ctrl.model.Price | currency}}</td>
+										<td class="text-right">{{$ctrl.model.Price * $ctrl.taxFee| currency}}</td>
 								</tr>
 
-								<tr ng-show="$ctrl.color.Price">
+								<tr ng-show="$ctrl.color.OptionName">
 									<th>Χρώμα</th>
-									<td>{{$ctrl.color.OptionDescription}} <small class="text-muted">({{$ctrl.color.OptionCode}})</small></td>
-									<td class="text-center">{{$ctrl.color.PresentationFee || '-'}}</td>
-									<td class="text-center">{{$ctrl.color.ChangeCO2 || '-'}}</td>
-									<td class="text-right">{{$ctrl.color.Price | currency}}</td>
-									<td class="text-right">{{$ctrl.color.Price * $ctrl.taxFee| currency}}</td>
+									<td>{{$ctrl.color.OptionDescription}}
+										<td class="text-center">{{$ctrl.color.PresentationFee || '-'}}</td>
+										<td class="text-center">{{$ctrl.color.ChangeCO2 || '-'}}</td>
+										<td class="text-right">{{$ctrl.color.Price | currency}}</td>
+										<td class="text-right">{{$ctrl.color.Price * $ctrl.taxFee| currency}}</td>
 								</tr>
 
 								<tr ng-show="$ctrl.equipment.autoEquipments && $ctrl.equipment.autoEquipments.length">
 									<th>Πρόσθετος εξοπλισμός</th>
 
 									<div>
-										<td>{{$ctrl.equipment.autoEquipments[0].OptionDescription}}
-											<small class="text-muted">({{$ctrl.equipment.autoEquipments[0].OptionCode}})</small>
-										</td>
+										<td>{{$ctrl.equipment.autoEquipments[0].OptionDescription}} </td>
 
 										<td class="text-center">{{$ctrl.equipment.autoEquipments[0].PresentationFee || '-'}}</td>
 
@@ -68,9 +65,7 @@
 								<tr ng-show="$ctrl.equipment.autoEquipments && $ctrl.equipment.autoEquipments.length > 1"
 								    ng-repeat="equipment in $ctrl.equipment.autoEquipments | limitTo: (1 - $ctrl.equipment.autoEquipments.length) track by $index">
 									<th></th>
-									<td>{{equipment.OptionDescription}}
-										<small class="text-muted">({{equipment.OptionCode}})</small>
-									</td>
+									<td>{{equipment.OptionDescription}} </td>
 
 									<td class="text-center">{{equipment.PresentationFee || '-'}}</td>
 
@@ -85,9 +80,7 @@
 									<th>Εξοπλισμός που προστέθηκε χειροκίνητα</th>
 
 									<div>
-										<td>{{$ctrl.equipment.manualEquipments[0].description}}
-											<small class="text-muted">({{$ctrl.equipment.manualEquipments[0].code}})</small>
-										</td>
+										<td>{{$ctrl.equipment.manualEquipments[0].description}} </td>
 
 										<td class="text-center">-</td>
 
@@ -105,9 +98,7 @@
 									<tr ng-repeat="equipment in $ctrl.equipment.manualEquipments | limitTo: (1 - $ctrl.equipment.manualEquipments.length) track by $index">
 										<th></th>
 
-										<td>{{equipment.description}}
-											<small class="text-muted">({{equipment.code}})</small>
-										</td>
+										<td>{{equipment.description}} </td>
 
 										<td class="text-center">-</td>
 
@@ -127,9 +118,7 @@
 								<tr>
 									<th>ΑΠΛΤΠΦ</th>
 
-									<td></td>
-									<td></td>
-									<td></td>
+									<td colspan="3"></td>
 
 									<td class="va-middle text-right">
 										{{$ctrl.finalPrice.noRegTax | currency}}
@@ -144,7 +133,7 @@
 
 									<td>
 										<button type="button"
-										        ng-click="$ctrl.calcFee(); $ctrl.setFormValidity(submitOptionsForm)"
+										        ng-click="$ctrl.calcFee(); $ctrl.calcTrafficCharge(); $ctrl.setFormValidity(submitOptionsForm)"
 										        class="btn btn-md my-button">Υπολογισμός</button>
 									</td>
 
@@ -162,7 +151,6 @@
 											       placeholder="Συμπληρώστε ή υπολογίστε"
 											       type="text"
 											       ui-number-mask="2"
-											       lang="el"
 											       class="form-control">
 
 										</div>
@@ -183,6 +171,7 @@
 											<i>€</i>
 
 											<input required
+											       disabled
 											       name="beforeTax"
 											       ng-model="$ctrl.finalPrice.beforeTax"
 											       placeholder="Συμπληρώστε ή υπολογίστε"
@@ -199,8 +188,7 @@
 								<tr>
 									<th>ΑΠΛΤ</th>
 
-									<td></td>
-									<td></td>
+									<td colspan="2"></td>
 
 									<td colspan="2"
 									    class="va-middle">
@@ -210,6 +198,7 @@
 											<i>€</i>
 
 											<input required
+											       disabled
 											       name="afterTax"
 											       ng-model="$ctrl.finalPrice.afterTax"
 											       placeholder="Συμπληρώστε ή υπολογίστε"
@@ -223,6 +212,32 @@
 									</td>
 
 								</tr>
+
+								<tr>
+									<th>Tέλη κυκλοφορίας</th>
+
+									<td colspan="2"></td>
+
+
+									<td colspan="2"
+									    class="va-middle">
+										<div class="input-icon input-icon-right">
+
+											<i>€</i>
+
+											<input required
+											       name="regTax"
+											       ng-model="$ctrl.trafficCharge"
+											       placeholder="Συμπληρώστε ή υπολογίστε"
+											       type="text"
+											       ui-number-mask="2"
+											       class="form-control">
+
+										</div>
+									</td>
+
+								</tr>
+
 
 							</tbody>
 
