--- a/src/assets/styles/sass/main.scss
+++ b/src/assets/styles/sass/main.scss
@@ -12,6 +12,7 @@
 @import "partials/colors";
 @import "partials/buttons";
 @import "partials/box";
+@import "partials/loading-bar";
 
 //Themes
 @import "themes/vw";
