--- a/src/assets/styles/sass/themes/_vw_lcv.scss
+++ b/src/assets/styles/sass/themes/_vw_lcv.scss
@@ -2,8 +2,11 @@
 	//Header
 	app-header {
 		background-color: $vw_lcv-dark;
+		color: $gray;
 
 		a.previous {
+
+			color: $gray;
 
 			&:hover i {
 				color: darken($vw_lcv-special, 10)
@@ -16,7 +19,7 @@
 	} //Footer
 	options-footer {
 		background-color: $vw_lcv-gray;
-	}//Steps
+	} //Steps
 	steps .steps a {
 		color: $vw_lcv-special i {
 			color: $vw_lcv-special
