add confirm modal, add local mechanism for edit data (pending to be approved by real)

--- a/src/app/components/app-header/appheader.html
+++ b/src/app/components/app-header/appheader.html
@@ -2,7 +2,7 @@
 
 	<a ng-show="!$ctrl.stateIs('app.select-family')"
 	   href
-	   ng-click="$ctrl.onBack()"
+	   ng-click="$ctrl.back()"
 	   class="hidden-xs previous pull-left">
 		<h2 class="text-center">
 			<strong><i class="fa fa-angle-double-left"></i> {{$ctrl.familyName}}</strong>
