--- a/src/app/components/select-options/step-four/stepfour.html
+++ b/src/app/components/select-options/step-four/stepfour.html
@@ -82,7 +82,7 @@
 									<div>
 										<td>{{$ctrl.equipment.manualEquipments[0].description}} </td>
 
-										<td class="text-center">-</td>
+										<td class="text-center">{{$ctrl.equipment.manualEquipments[0].code}}</td>
 
 										<td class="text-center">{{$ctrl.equipment.manualEquipments[0].co2}}</td>
 
@@ -100,7 +100,7 @@
 
 										<td>{{equipment.description}} </td>
 
-										<td class="text-center">-</td>
+										<td class="text-center">{{equipment.code}}</td>
 
 										<td class="text-center">{{equipment.co2}}</td>
 
