--- a/src/assets/styles/sass/main.scss
+++ b/src/assets/styles/sass/main.scss
@@ -13,6 +13,7 @@
 @import "partials/buttons";
 @import "partials/box";
 @import "partials/loading-bar";
+@import "partials/modal";
 
 //Themes
 @import "themes/vw";
